--- a/Views/Home/Offline.cshtml
+++ b/Views/Home/Offline.cshtml
@@ -5,7 +5,8 @@
     
     <div class="facts-block content content-center" id="facts-block">
         <h2>Site Under Maintenance</h2>
-        <h2>admin@nadikebangsaan.com</h2>
+        <h2><a href="/Manage/Index">@MyConstant.user_admin_email</a></h2>
+        
         
         
     </div>
