--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Nadikebangsaan.com</title>
+    <title>@ViewBag.Title - @MyConstant.Web_Name</title>
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -19,7 +19,7 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://www.nadikebangsaan.com/Content/img/nadilogo.png"><!-- link to image for socio -->
     <meta property="og:url" content="http://www.nadikebangsaan.com/">
-    <link rel="shortcut icon" href="~/Content/img/favicon.ico">
+    <link rel="shortcut icon" href="~/Content/img/lelongpos.ico">
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -84,14 +84,12 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
     <!-- BEGIN HEADER -->
     <div class="header">
         <div class="container">
-            <a class="site-logo" href="/Home"><img src="~/Content/img/nadilogoText.png" style="width:154px; height:32px;" alt="Metronic FrontEnd"></a>
+            <a class="site-logo" href="/Home"><img src="~/Content/img/nadilogoText.png" style="width:66px; height:32px;" alt="Metronic FrontEnd"></a>
             <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
             <!-- BEGIN NAVIGATION -->
             <div class="header-navigation pull-right font-transform-inherit">
                 <ul>
-                    <li>
-                        @Html.ActionLink("Laman Utama", "Index", "Home", new { area = "" }, null)
-                    </li>
+                    
 
 
                     @*<li>
@@ -100,9 +98,7 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
                     
                     @if (Request.IsAuthenticated)
                     {
-                        <li>
-                            @Html.ActionLink("Terma dan Syarat", "Tnc", "Home", new { area = "" }, null)
-                        </li>
+                       
                         <li>
                             @Html.ActionLink("Laman Ahli", "Index", "Manage", new { area = "" }, null)
                         </li>
@@ -116,7 +112,11 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
                         <li>
                             @Html.ActionLink("Claim Request", "ClaimRequestList", "Transaction", new { area = "" }, null)
                         </li>
-                        
+
+                        <li>
+                            @Html.ActionLink("Upload", "Index", "Transaction", new { area = "" }, null)
+                        </li>
+
 
                     }
 
@@ -145,45 +145,14 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
             </div>*@
         </div>
     
-                <!-- BEGIN PRE-FOOTER -->
-                <div class="pre-footer">
-                    <div class="container">
-                        <div class="row">
-                            <!-- BEGIN BOTTOM ABOUT BLOCK -->
-                            <div class="col-md-4 col-sm-6 pre-footer-col">
-                                <h2>About us</h2>
-                                <p>Pertubuhan Pembangunan Intergeriti Malaysia [PPM-018-10-27022016] (National Association Development Integrity) </p>
-                                <p>
-                                    Dikenali sebagai  NADI Kebangsaan. Sebuah Pertubuhan
-                                    (NGO) Berdaftar beroreantasikan aktiviti Keusahawan, Reakreasi, Latihan, Sukan dan Kebajikan.
-                                    Bekerjasama & menawarkan Peserta Pakej Program menjadi Ahli Nadi Kebangsaan.
-                                </p>
-                            </div>
-                            <!-- END BOTTOM ABOUT BLOCK -->
-                            <!-- BEGIN BOTTOM CONTACTS -->
-                            <div class="col-md-4 col-sm-6 pre-footer-col">
-                                <h2>Our Contacts</h2>
-                                <address class="margin-bottom-40">
-                                    No. 99-1,<br>
-                                    Jalan LP 7/2, <br>
-                                    Bandar Putra Permai,<br>
-                                    43300, Seri Kembangan.<br>
-                                    Email: <a href="mailto:info@nadikebangsaan.com">@MyConstant.last_office_email</a><br>
-                                    Tel: <a href="#">@MyConstant.last_office_noTel</a>
-                                </address>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END PRE-FOOTER -->
+                
                 <!-- BEGIN FOOTER -->
                 <div class="footer">
                     <div class="container">
                         <div class="row">
                             <!-- BEGIN COPYRIGHT -->
                             <div class="col-md-6 col-sm-6 padding-top-10">
-                                <p>&copy; @DateTime.Now.Year - Nadikebangsaan.com</p>
+                                <p>&copy; @DateTime.Now.Year - @MyConstant.Web_Name</p>
                             </div>
                             <!-- END COPYRIGHT -->
                             <!-- BEGIN PAYMENTS -->
