--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -5,7 +5,7 @@ Author: cosmic
 Website:
 */
 body {
-    color: #797979;
+    color: #000000;
     font-family: 'Lato', sans-serif;
     /*font-family: 'Open Sans', sans-serif;*/
     padding: 0px !important;
@@ -19,11 +19,11 @@ a:focus {
     outline: none;
 }
 ::selection {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
 }
 ::-moz-selection {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
 }
 h1,
@@ -36,7 +36,7 @@ h6 {
     /*font-family: 'Open Sans', sans-serif;*/
 }
 a { color: #444e67 }
-a:hover { color: #48cfad }
+a:hover { color: #d10c0c }
 p { line-height: 22px }
 /*header*/
 .head-section { border-bottom: 1px solid #eee }
@@ -45,14 +45,14 @@ p { line-height: 22px }
 }
 .navbar-default { border: none }
 .navbar-brand {
-    color: #bcc0cd;
+    color: #000000;
     font-size: 30px;
     font-weight: 100;
     line-height: 30px;
     margin-top: 30px;
     padding: 0;
 }
-.navbar-brand span { color: #48cfad }
+.navbar-brand span { color: #d10c0c }
 .head-section .navbar-collapse  ul.navbar-nav {
     float: right;
     margin-right: 0;
@@ -61,7 +61,7 @@ p { line-height: 22px }
 .head-section .navbar-default { background-color: #fff }
 .head-section .nav li a,
 .head-section .nav li.active ul.dropdown-menu li a {
-    color: #999;
+    color: #000000;
     font-size: 14px;
     font-weight: 300;
     background: none;
@@ -76,7 +76,7 @@ ul.dropdown-menu { border: none }
 .head-section .nav li.active ul.dropdown-menu li a:hover,
 .head-section .nav li.active ul.dropdown-menu li.active a {
     color: #fff;
-    background-color: #48cfad;
+    background-color: #d10c0c;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
@@ -87,7 +87,7 @@ ul.dropdown-menu { border: none }
 .head-section .navbar-default .navbar-nav > .open > a:hover,
 .head-section .navbar-default .navbar-nav > .open > a:focus {
     color: #fff;
-    background-color: #48cfad;
+    background-color: #d10c0c;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
@@ -175,7 +175,7 @@ ul.dropdown-menu { border: none }
 /*homepage features*/
 .feature-head { padding: 10px 0 }
 .feature-head h1 {
-    color: #797979;
+    color: #000000;
     font-size: 30px;
     font-weight: 300;
     text-transform: uppercase;
@@ -208,11 +208,11 @@ ul.dropdown-menu { border: none }
     line-height: normal;
     margin-top: 40px;
     display: block;
-    color: #48cfad;
+    color: #d10c0c;
 }
 .f-box:hover,
 .f-box.active {
-    background: #48cfad;
+    background: #d10c0c;
     padding: 20px;
     text-align: center;
     min-height: 210px;
@@ -331,7 +331,7 @@ ul.dropdown-menu { border: none }
 .tab .nav-tabs.nav-justified > li { border-right: 1px solid #f4f4f4 }
 .tab .nav-tabs.nav-justified > li:last-child { border-right: none }
 .p-head {
-    color: #48cfad;
+    color: #d10c0c;
     font-size: 14px;
     font-weight: 400;
 }
@@ -481,7 +481,7 @@ ul.about-flex-slides { margin-left: 0 }
     -moz-border-radius: 60px;
     -webkit-border-radius: 60px;
 }
-.view a.info:hover { background-color: #48cfad }
+.view a.info:hover { background-color: #d10c0c }
 .mask a i {
     color: #fff !important;
     font-size: 16px;
@@ -690,7 +690,7 @@ ul.about-flex-slides { margin-left: 0 }
     position: relative;
 }
 .most-popular {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     border: 1px solid #16a085;
 }
@@ -713,7 +713,7 @@ ul.about-flex-slides { margin-left: 0 }
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 4px;
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     border: none;
     box-shadow: none;
@@ -800,7 +800,7 @@ ul.about-flex-slides { margin-left: 0 }
     margin-bottom: 0;
     background: none;
 }
-.breadcrumb li a { color: #48cfad }
+.breadcrumb li a { color: #d10c0c }
 .breadcrumb li.active { color: #fff }
 .breadcrumbs h1 {
     font-size: 24px;
@@ -815,7 +815,7 @@ ul.about-flex-slides { margin-left: 0 }
 }
 .contact-form { margin-bottom: 20px }
 .address h4 {
-    color: #797979;
+    color: #000000;
     margin-top: -3px;
     text-transform: uppercase;
     margin-bottom: 20px;
@@ -886,7 +886,7 @@ section.contact-infos {
     color: #fff;
     margin-right: 30px;
 }
-.ico-bg { background: #48cfad }
+.ico-bg { background: #d10c0c }
 .round-five {
     border-radius: 5px;
     -moz-border-radius: 5px;
@@ -993,7 +993,7 @@ section.contact-infos {
     transition: all .3s ease;
 }
 .team-social-link a:hover {
-    color: #48cfad;
+    color: #d10c0c;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
@@ -1071,7 +1071,7 @@ section.contact-infos {
 }
 .blog-two-info { padding: 15px 10px 0 20px }
 .blog-two-info .label-info {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     opacity: .7;
     margin-right: 4px;
 }
@@ -1105,7 +1105,7 @@ section.contact-infos {
 .date-wrap .date {
     font-size: 30px;
     font-weight: 300;
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     border-radius: 1px 1px 0 0;
     -webkit-border-radius: 1px 1px 0 0;
@@ -1143,7 +1143,7 @@ section.contact-infos {
 .blog-item h1,
 .blog-item h1 a {
     font-size: 25px;
-    color: #48cfad;
+    color: #d10c0c;
     font-weight: 300;
 }
 .blog-item h1 {
@@ -1156,7 +1156,7 @@ section.contact-infos {
     font-size: 16px;
 }
 .author a,
-.st-view a { color: #48cfad }
+.st-view a { color: #d10c0c }
 .st-view { margin-top: 20px }
 .st-view ul li { margin-bottom: 5px }
 .blog-side-item h3 {
@@ -1222,7 +1222,7 @@ ul.tag li a {
     margin-top: 0;
     margin-bottom: 20px;
 }
-.footer address a { color: #48cfad }
+.footer address a { color: #d10c0c }
 .tweet-box {
     background: #505b71;
     padding: 8px 15px;
@@ -1250,7 +1250,7 @@ ul.tag li a {
 }
 .tweet-box  a,
 .tweet-box i { color: #00adef }
-.tweet-box  a:hover { color: #48cfad }
+.tweet-box  a:hover { color: #d10c0c }
 .tweet-box i {
     font-size: 40px;
     float: left;
@@ -1280,7 +1280,7 @@ ul.tag li a {
     transition: all .3s ease;
 }
 .social-link-footer li a:hover {
-    background: #48cfad;
+    background: #d10c0c;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
@@ -1333,7 +1333,7 @@ ul.page-footer-list li i { padding-right: 10px }
 }
 .slide_title {
     font-weight: 300;
-    color: #48cfad;
+    color: #d10c0c;
     text-transform: uppercase;
     font-size: 35px;
 }
@@ -1363,7 +1363,7 @@ ul.page-footer-list li i { padding-right: 10px }
 }
 .slide_btn {
     font-weight: 300;
-    background: #48cfad;
+    background: #d10c0c;
     padding: 15px 20px;
     color: #fff;
     font-size: 14px;
@@ -1458,7 +1458,7 @@ ul.page-footer-list li i { padding-right: 10px }
     margin-bottom: 30px;
 }
 .property hr { border-color: #dfdcdf }
-.property i { color: #48cfad }
+.property i { color: #d10c0c }
 a.btn-purchase {
     background: #475168;
     color: #fff;
@@ -1475,7 +1475,7 @@ a.btn-purchase {
 }
 a.btn-purchase:hover,
 a.btn-purchase:focus {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
@@ -1600,7 +1600,7 @@ ul#filters > li > a:hover,
 ul#filters > li > a:focus,
 ul#filters > .active > a,
 ul#filters > .active > span {
-    background: #48cfad;
+    background: #d10c0c;
     padding: 10px 15px;
     display: inline-block;
     color: #fff;
@@ -1629,7 +1629,7 @@ ul#filters > .active > span {
     background-size: cover;
     width: 100%;
     min-height: 400px;
-    background-color: #48cfad;
+    background-color: #d10c0c;
     font-style: italic;
 }
 .parallax1 h1 {
@@ -1642,7 +1642,7 @@ ul#filters > .active > span {
 }
 /*newsletter*/
 #newsletter {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     padding: 60px 0;
 }
 #newsletter p.lead {
@@ -1716,7 +1716,7 @@ ul#filters > .active > span {
     margin-bottom: 30px;
 }
 #faq-other mark {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
 }
 .faq-square { margin: 40px 0 20px }
@@ -1736,12 +1736,12 @@ ul#filters > .active > span {
     border: 17px solid #eee;
 }
 .gr-bg {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     margin-top: -40px;
     margin-bottom: -50px;
 }
 #btn-login {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     border: none;
     border-radius: 1px;
     -webkit-border-radius: 1px;
@@ -1766,12 +1766,12 @@ ul#filters > .active > span {
 .panel-heading {
     border-top-right-radius: 1px;
     border-top-left-radius: 1px;
-    background-color: #48cfad;
+    background-color: #d10c0c;
     border: none;
 }
 .panel-info>.panel-heading {
     color: #eee;
-    background-color: #48cfad;
+    background-color: #d10c0c;
 }
 .panel-info>.panel-heading a:hover { color: #eee }
 .panel-body {
@@ -1796,7 +1796,7 @@ ul#filters > .active > span {
 }
 #signupbox { margin-bottom: 20px }
 #btn-signup {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     border-radius: 1px;
     -moz-border-radius: 1px;
     -webkit-border-radius: 1px;
@@ -1854,7 +1854,7 @@ ul#filters > .active > span {
     margin: 0;
     padding: 20px 15px;
     text-align: center;
-    background: #48cfad;
+    background: #d10c0c;
     border-radius: 3px 3px 0 0;
     -moz-border-radius: 3px 3px 0 0;
     -webkit-border-radius: 3px 3px 0 0;
@@ -1890,7 +1890,7 @@ ul#filters > .active > span {
     font-size: 12px;
 }
 .form-signin .btn-login {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     text-transform: uppercase;
     font-weight: 300;
@@ -2068,7 +2068,7 @@ ol.unstyled {
     -moz-border-radius: 1px;
     color: #fff;
     height: 100%;
-    background: #48cfad;
+    background: #d10c0c;
 }
 .skill_bar {
     width: 100%;
@@ -2085,7 +2085,7 @@ ol.unstyled {
     clear: both;
 }
 #progress {
-    background: #48cfad; /*-- Color of the bar --*/
+    background: #d10c0c; /*-- Color of the bar --*/
     width: 0%;
     color: #fff;
     padding-left: 8px;
@@ -2195,7 +2195,7 @@ ol.unstyled {
     cursor: pointer;
 }
 #filters li span.active {
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
 }
 #portfoliolist-three .portfolio {
@@ -2370,7 +2370,7 @@ span.filter {
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    background: #48cfad;
+    background: #d10c0c;
     color: #fff;
     border: none;
     box-shadow: none;
@@ -2573,7 +2573,7 @@ p { text-align: left }
 .btn.btn-info:hover,
 .btn.btn-info:active,
 .btn.btn-info.hover {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     border: none;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
@@ -2634,7 +2634,7 @@ p { text-align: left }
     border-color: #efa50b;
 }
 .open .dropdown-toggle.btn-info {
-    background-color: #48cfad;
+    background-color: #d10c0c;
     border-color: #2fa084;
 }
 .btn.btn-flat {
@@ -2888,12 +2888,12 @@ p { text-align: left }
     margin-bottom: 15px;
 }
 .feature-box-heading i {
-    color: #48cfad;
+    color: #d10c0c;
     width: 40px;
     height: 40px;
     display: inline-block;
     border-radius: 50px;
-    border: 1px solid #48cfad;
+    border: 1px solid #d10c0c;
     line-height: 40px;
 }
 .border-one {
@@ -2935,7 +2935,7 @@ p { text-align: left }
 
 #back-to-top:hover {
 
-    background-color:#48cfad;
+    background-color:#d10c0c;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
     filter: alpha(opacity=80);
     opacity:0.8;
