--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -1668,7 +1668,7 @@ ul#filters > .active > span {
     margin-left: -1px;
 }
 .btn.btn-inverse {
-    background-color: #475168;
+    background-color: #d10c0c;
     color: #fff;
     height: 45px;
     -webkit-transition: all .3s ease;
