--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -78,115 +78,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="#">
-                            Feature <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="typography.html">Typography</a>
-                            </li>
-                            <li>
-                                <a href="button.html">Buttons</a>
-                            </li>
-                            <li>
-                                <a href="form.html">Form</a>
-                            </li>
-                            <li>
-                                <a href="table.html">Table</a>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a href="#" tabindex="-1">More options</a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#" tabindex="-1">Second level</a>
-                                    </li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#">Even More..</a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a href="#">3rd level</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">3rd level</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">Second level</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Second level</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="#">
-                            Pages <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="about.html">About</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404 page</a>
-                            </li>
-                            <li>
-                                <a href="career.html">career</a>
-                            </li>
-                            <li>
-                                <a href="login.html">Login</a>
-                            </li>
-                            <li>
-                                <a href="registration.html">Registration</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a href="#" tabindex="-1">Pricing table</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-submenu"></li>
-                                    <li>
-                                        <a href="price-table-one.html">Pricing table one</a>
-                                    </li>
-                                    <li>
-                                        <a href="price-table-two.html">Pricing table two</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="service.html">Service</a>
-                            </li>
-                            <li>
-                                <a href="terms.html">Terms & Condition</a>
-                            </li>
-                            <li>
-                                <a href="privacy.html">Privacy policy</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="#">
-                            Portfolio <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-3-col.html">Portfolio 3 column</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">Portfolio 4 column</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-single-image.html">Portfolio Single Image</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-single-video.html">Portfolio Single Video</a>
-                            </li>
-                        </ul>
-                    </li>
+                    
+                    
+                    
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="#">
                             Blog <i class="fa fa-angle-down"></i>
@@ -209,8 +103,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
-                    <li><input class="form-control search" placeholder="Search" type="text"></li>
+                   
                 </ul>
+
             </div>
         </div>
     </header>
@@ -223,27 +118,121 @@
             <div class="row">
 
                 <div class="col-md-12">
-                    <p class="lead wow fadeInLeft">Stay in the loop with our newsletter!</p>
+                    <p class="lead wow fadeInLeft">Find Property Auctions In Malaysia</p>
                 </div>
 
-                <div class="col-md-12">
 
-                    <!--////////// Newsletter Form //////////-->
-                    <form id="newsletter-signup">
+                <div class="form-group col-md-12">
+
+                  
                         <div class="input-group wow fadeInRight">
-                            <input type="text" name="e-mail" id="e-mail" class="form-control newsletter-input">
+                            <input type="text" name="e-mail" id="e-mail" class="form-control newsletter-input"
+                                   placeholder="Enter Location Name">
                             <span class="input-group-btn">
-                                <button class="btn btn-inverse btn-hg" type="submit" name="submit">Sign Up</button>
+                                <button class="btn btn-inverse btn-hg" type="submit" name="submit">Search</button>
                             </span>
-                        </div><!-- /input-group -->
-                    </form>
-                    <!--////////// end of Newsletter Form ///////////-->
+                        </div>
 
-                    <div id="error-info"></div><!-- Error notification for newsletter signup form -->
+                    
+
+                    </div>
+
+                </div><!-- /row -->
+
+            <div class="row">
+
+           
+
+
+                <div class="form-group col-md-6 wow fadeInRight">
+
+
+                    <select class="form-control newsletter-input">
+                        <option value="">.input-lg</option>
+                    </select>
+
+
+
+                </div>
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <select class="form-control newsletter-input">
+                        <option value="">.input-lg</option>
+                    </select>
+
+
+
+                </div>
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <select class="form-control newsletter-input">
+                        <option value="">.input-lg</option>
+                    </select>
+
+
 
                 </div>
 
             </div><!-- /row -->
+
+            <div class="row">
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+
+
+
+                </div>
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+
+
+
+                </div>
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+
+
+
+                </div>
+
+                <div class="form-group col-md-3 wow fadeInRight">
+
+
+                    <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+
+
+
+                </div>
+
+            </div><!-- /row -->
+
+            <div class="row">
+
+                <div class="form-group col-md-12 wow fadeInRight">
+
+
+                    <button class="btn btn-danger btn-lg">Danger</button>
+
+
+
+                </div>
+
+            </div><!-- /row -->
+
+            
         </div><!-- /container -->
 
 
