--- a/Views/Shared/_LayoutOffline.cshtml
+++ b/Views/Shared/_LayoutOffline.cshtml
@@ -1,24 +1,11 @@
-﻿<!DOCTYPE html>
-<!--
-Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.2.0
-Version: 3.4
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-License: You must have a valid license purchased only from themeforest (the above link) in order to legally use the theme for your project.
--->
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en">
-<!--<![endif]-->
-<!-- Head BEGIN -->
+﻿@using MVC5.Common
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - @MyConstant.Web_Name</title>
+
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content="Metronic Shop UI description" name="description">
@@ -33,33 +20,52 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
     <meta property="og:image" content="http://www.nadikebangsaan.com/Content/img/nadilogo.png"><!-- link to image for socio -->
     <meta property="og:url" content="http://www.nadikebangsaan.com/">
     <link rel="shortcut icon" href="~/Content/img/lelongpos.ico">
-    <!-- Fonts START -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Pathway+Gothic+One|PT+Sans+Narrow:400+700|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
-    <!-- Fonts END -->
-    <!-- Global styles BEGIN -->
-    <link href="~/Content/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/Content/assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/css/settings.css" rel="stylesheet">
-    <!-- Global styles END -->
-    <!-- Page level plugin styles BEGIN -->
-    <link href="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet">
-    <!-- Page level plugin styles END -->
-    <!-- Theme styles BEGIN -->
-    <link href="~/Content/assets/global/css/components.css" rel="stylesheet">
-    <link href="~/Content/assets/frontend/onepage/css/style.css" rel="stylesheet">
-    <link href="~/Content/assets/frontend/onepage/css/style-responsive.css" rel="stylesheet">
-    <link href="~/Content/assets/frontend/onepage/css/themes/red.css" rel="stylesheet" id="style-color">
-    <link href="~/Content/assets/frontend/onepage/css/custom.css" rel="stylesheet">
-    <!-- Theme styles END -->
-    <link href="~/Content/nadi.css" rel="stylesheet" />
+
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <script>
+    window.fbAsyncInit = function () {
+        FB.init({
+            appId: '881388775290574',
+            xfbml: true,
+            version: 'v2.5'
+        });
+    };
+
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) { return; }
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+
+
+
+    </script>
+
 </head>
-<!--DOC: menu-always-on-top class to the body element to set menu on top -->
-<body>
-    @using MVC5.Common
+@using MVC5.Common
+<body id="page-top" class="index">
+
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5&appId=881388775290574";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+
+
+    <!-- END BEGIN STYLE CUSTOMIZER -->
     <!-- BEGIN TOP BAR -->
     <div class="pre-header">
         <div class="container">
-            <div class="row" style="padding-top:9px !important;">
+            <div class="row">
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
@@ -67,69 +73,140 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
                         <li><i class="fa fa-envelope-o"></i><span>@MyConstant.last_office_email</span></li>
                     </ul>
                 </div>
-               
+                <!-- END TOP BAR LEFT PART -->
+                <!-- BEGIN TOP BAR MENU -->
+                @Html.Partial("_LoginPartial")
+                <!-- END TOP BAR MENU -->
             </div>
         </div>
     </div>
     <!-- END TOP BAR -->
+    <!-- BEGIN HEADER -->
+    <div class="header">
+        <div class="container">
+            <a class="site-logo" href="/Home"><img src="~/Content/img/nadilogoText.png" style="width:66px; height:32px;" alt="Metronic FrontEnd"></a>
+            <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
+            <!-- BEGIN NAVIGATION -->
+            <div class="header-navigation pull-right font-transform-inherit">
+                <ul>
 
-    @RenderBody()
 
-    
+
+                    @*<li>
+                            @Html.ActionLink("Blog", "Index", "Student", new { area = "" }, null)
+                        </li>*@
+
+                    @if (Request.IsAuthenticated)
+                    {
+
+                        <li>
+                            @Html.ActionLink("Upload", "Index", "Transaction", new { area = "" }, null)
+                        </li>
+
+                    }
+                    @if (User.IsInRole(MyConstant.Role_Admin))
+                    {
+                        <li>
+                            @Html.ActionLink("Membership Request", "MembershipRequest", "Transaction", new { area = "" }, null)
+                        </li>
+                        <li>
+                            @Html.ActionLink("Claim Request", "ClaimRequestList", "Transaction", new { area = "" }, null)
+                        </li>
+
+                        <li>
+                            @Html.ActionLink("Upload", "Index", "Transaction", new { area = "" }, null)
+                        </li>
+
+
+                    }
+
+
+                </ul>
+            </div>
+            <!-- END NAVIGATION -->
+        </div>
+    </div>
+    <!-- Header END -->
+
+
+
+    <div class="main">
+        <div class="container">
+            @RenderBody()
+        </div>
+        @*<div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="content-page">
+                        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                    </div>
+                </div>
+            </div>
+            </div>*@
+    </div>
+
+
     <!-- BEGIN FOOTER -->
     <div class="footer">
         <div class="container">
             <div class="row">
                 <!-- BEGIN COPYRIGHT -->
-                <div class="col-md-6 col-sm-6">
-                    <div class="copyright">© @DateTime.Now.Year - @MyConstant.Web_Name</div>
+                <div class="col-md-6 col-sm-6 padding-top-10">
+                    <p>&copy; @DateTime.Now.Year - @MyConstant.Web_Name</p>
                 </div>
                 <!-- END COPYRIGHT -->
-                <!-- BEGIN SOCIAL ICONS -->
-                <div class="col-md-6 col-sm-6 pull-right">
-                    <ul class="social-icons">
-                        <li><a class="rss" data-original-title="rss" href="javascript:void(0);"></a></li>
-                        <li><a class="facebook" data-original-title="facebook" href="javascript:void(0);"></a></li>
-                        <li><a class="twitter" data-original-title="twitter" href="javascript:void(0);"></a></li>
-                        <li><a class="googleplus" data-original-title="googleplus" href="javascript:void(0);"></a></li>
-                        <li><a class="linkedin" data-original-title="linkedin" href="javascript:void(0);"></a></li>
-                        <li><a class="youtube" data-original-title="youtube" href="javascript:void(0);"></a></li>
-                        <li><a class="vimeo" data-original-title="vimeo" href="javascript:void(0);"></a></li>
-                        <li><a class="skype" data-original-title="skype" href="javascript:void(0);"></a></li>
+                <!-- BEGIN PAYMENTS -->
+                <div class="col-md-6 col-sm-6">
+                    <ul class="social-footer list-unstyled list-inline pull-right">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dropbox"></i></a></li>
                     </ul>
                 </div>
-                <!-- END SOCIAL ICONS -->
+                <!-- END PAYMENTS -->
             </div>
         </div>
     </div>
     <!-- END FOOTER -->
-    <a href="#promo-block" class="go2top scroll"><i class="fa fa-arrow-up"></i></a>
-
-    <!-- Load JavaScripts at the bottom, because it will reduce page load time -->
-    <!-- Core plugins BEGIN (For ALL pages) -->
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+    <!-- Load javascripts at bottom, this will reduce page load time -->
+    <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
+    <!--[if lt IE 9]>
+    <script src="~/Content/assets/global/plugins/respond.min.js"></script>
+    <![endif]-->
     <script src="~/Content/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <script src="~/Content/assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
     <script src="~/Content/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- Core plugins END (For ALL pages) -->
+    <script src="~/Content/assets/frontend/layout/scripts/back-to-top.js" type="text/javascript"></script>
+    <!-- END CORE PLUGINS -->
+    <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
+    <script src="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
+    <script src="~/Content/assets/global/plugins/carousel-owl-carousel/owl-carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
     <!-- BEGIN RevolutionSlider -->
+
     <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
     <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/frontend/onepage/scripts/revo-ini.js" type="text/javascript"></script>
+    <script src="~/Content/assets/frontend/pages/scripts/revo-slider-init.js" type="text/javascript"></script>
     <!-- END RevolutionSlider -->
-    <!-- Core plugins BEGIN (required only for current page) -->
-    <script src="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="~/Content/assets/global/plugins/jquery.easing.js"></script>
-    <script src="~/Content/assets/global/plugins/jquery.parallax.js"></script>
-    <script src="~/Content/assets/global/plugins/jquery.scrollTo.min.js"></script>
-    <script src="~/Content/assets/frontend/onepage/scripts/jquery.nav.js"></script>
-    <!-- Core plugins END (required only for current page) -->
-    <!-- Global js BEGIN -->
-    <script src="~/Content/assets/frontend/onepage/scripts/layout.js" type="text/javascript"></script>
-    <script>
-    $(document).ready(function() {
-        Layout.init();
-    });
+    <script src="~/Content/assets/frontend/layout/scripts/layout.js" type="text/javascript"></script>
+    <script type="text/javascript">
+                    jQuery(document).ready(function () {
+                        Layout.init();
+                        Layout.initOWL();
+                        RevosliderInit.initRevoSlider();
+                        Layout.initTwitter();
+                        //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
+                        //Layout.initNavScrolling();
+                    });
     </script>
-    <!-- Global js END -->
 </body>
+
 </html>
