--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@model MVC5.Models.VM.SearchVO
 @using MVC5.Common
 
 <!-- Sequence Modern Slider -->
+@using (Html.BeginForm("Index", "Transaction", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
 <div id="newsletter-faq" style="margin-top:0px !important;">
 
 
@@ -37,32 +39,22 @@
 
             <div class="form-group col-md-6 wow fadeInRight">
 
-
-                <select class="form-control newsletter-input">
-                    <option value="">.input-lg</option>
-                </select>
-
-
+                        @Html.DropDownList("PropertyTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+         
 
             </div>
 
             <div class="form-group col-md-3 wow fadeInRight">
 
-
-                <select class="form-control newsletter-input">
-                    <option value="">.input-lg</option>
-                </select>
-
-
+                        @Html.DropDownList("NegeriID", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+       
 
             </div>
 
             <div class="form-group col-md-3 wow fadeInRight">
 
-
-                <select class="form-control newsletter-input">
-                    <option value="">.input-lg</option>
-                </select>
+                        @Html.DropDownList("ListingTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+          
 
 
 
@@ -75,7 +67,7 @@
             <div class="form-group col-md-3 wow fadeInRight">
 
 
-                <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+                <input class="form-control newsletter-input" type="text" placeholder="Min Price (MYR)">
 
 
 
@@ -84,7 +76,7 @@
             <div class="form-group col-md-3 wow fadeInRight">
 
 
-                <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+                <input class="form-control newsletter-input" type="text" placeholder="Max Price (MYR)">
 
 
 
@@ -93,7 +85,7 @@
             <div class="form-group col-md-3 wow fadeInRight">
 
 
-                <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+                <input class="form-control newsletter-input" type="text" placeholder="Min Area (Sq.ft)">
 
 
 
@@ -102,7 +94,7 @@
             <div class="form-group col-md-3 wow fadeInRight">
 
 
-                <input class="form-control newsletter-input" type="text" placeholder=".input-lg">
+                <input class="form-control newsletter-input" type="text" placeholder="Max Area (Sq.ft)">
 
 
 
@@ -128,7 +120,7 @@
 
 
 </div>
-
+}
 
 <div class="container" id="tourpackages-carousel">
 
