--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @using MVC5.Common
 
 <!-- Sequence Modern Slider -->
-@using (Html.BeginForm("Index", "Transaction", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Index", "Listing", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 <div id="newsletter-faq" style="margin-top:0px !important;">
 
@@ -19,8 +19,7 @@
 
 
                 <div class="input-group wow fadeInRight">
-                    <input type="text" name="e-mail" id="e-mail" class="form-control newsletter-input"
-                           placeholder="Enter Location Name">
+                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Enter Location Name" } })
                     <span class="input-group-btn">
                         <button class="btn btn-inverse btn-hg" type="submit" name="submit">Search</button>
                     </span>
@@ -66,9 +65,14 @@
 
             <div class="form-group col-md-3 wow fadeInRight">
 
+                @Html.EditorFor(model => model.MinPrice, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Min Price (MYR)" } })
 
-                <input class="form-control newsletter-input" type="text" placeholder="Min Price (MYR)">
 
+            </div>
+
+            <div class="form-group col-md-3 wow fadeInRight">
+
+                @Html.EditorFor(model => model.MaxPrice, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Max Price (MYR)" } })
 
 
             </div>
@@ -76,7 +80,7 @@
             <div class="form-group col-md-3 wow fadeInRight">
 
 
-                <input class="form-control newsletter-input" type="text" placeholder="Max Price (MYR)">
+                @Html.EditorFor(model => model.MinSize, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Min Area (Sq.ft)" } })
 
 
 
@@ -84,17 +88,8 @@
 
             <div class="form-group col-md-3 wow fadeInRight">
 
+                @Html.EditorFor(model => model.MaxSize, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Max Area (Sq.ft)" } })
 
-                <input class="form-control newsletter-input" type="text" placeholder="Min Area (Sq.ft)">
-
-
-
-            </div>
-
-            <div class="form-group col-md-3 wow fadeInRight">
-
-
-                <input class="form-control newsletter-input" type="text" placeholder="Max Area (Sq.ft)">
 
 
 
