update honme page

--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -145,9 +145,9 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-sm-3 address wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">
+                <div class="col-lg-4 col-sm-4 address wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">
                     <h1>
-                        contact info
+                        ABOUT @MyConstant.Web_Name
                     </h1>
                     <address>
                         <p><i class="fa fa-home pr-10"></i>Address: No.XXXXXX street</p>
@@ -157,37 +157,8 @@
                         <p><i class="fa fa-envelope pr-10"></i>Email :   <a href="javascript:;">supportSample.com</a></p>
                     </address>
                 </div>
-                <div class="col-lg-3 col-sm-3 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".3s">
-                    <h1>latest tweet</h1>
-                    <div class="tweet-box">
-                        <i class="fa fa-twitter"></i>
-                        <em>
-                            Please follow
-                            <a href="javascript:;">Sample</a>
-                            for all future updates of us!
-                            <a href="javascript:;">twitter.com/acme</a>
-                        </em>
-                    </div>
-                    <div class="tweet-box">
-                        <i class="fa fa-twitter"></i>
-                        <em>
-                            Please follow
-                            <a href="javascript:;">Sample</a>
-                            for all future updates of us!
-                            <a href="javascript:;">twitter.com/acme</a>
-                        </em>
-                    </div>
-                    <div class="tweet-box">
-                        <i class="fa fa-twitter"></i>
-                        <em>
-                            Please follow
-                            <a href="javascript:;">Sample</a>
-                            for all future updates of us!
-                            <a href="javascript:;">twitter.com/acme</a>
-                        </em>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-3">
+                
+                <div class="col-lg-4 col-sm-4">
                     <div class="page-footer wow fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                         <h1>
                             Our Company
@@ -220,7 +191,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-3">
+                <div class="col-lg-4 col-sm-4">
                     <div class="text-footer wow fadeInUp" data-wow-duration="2s" data-wow-delay=".7s">
                         <h1>
                             Text Widget
@@ -253,7 +224,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="copyright">
-                        <p>&copy; Copyright - Acme Theme by cosmic.</p>
+                        <p>&copy; Copyright @DateTime.Now.Year - @MyConstant.Web_Name</p>
                     </div>
                 </div>
             </div>
