--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,40 @@
 ﻿@model MVC5.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+    <div class="container">
+        @Html.AntiForgeryToken()
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Enter your email</h2>
+                <h3>Reset Password Link Will be send to your email</h3>
+                <hr />
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email / Username" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" class="btn btn-success" value="Email Link" />
+                        <hr />
+                        <p>
+                            Go Back To @Html.ActionLink("Login!", "Login")
+                        </p>
+                    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                </div>
+            </div>
+            </div>
+            </div>
+            }
+
+
