--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -94,7 +94,7 @@
 
 
                 <div class="col-lg-9">
-                    <h2 id="forms-example">Auction Properties in Malaysia for "@ViewBag.enterLocation" (@Model.Count().ToString() Results Found)</h2>
+                    <h2 id="forms-example">Auction Properties in Malaysia for "@ViewBag.enterLocation" (@ViewBag.listSize Results Found)</h2>
                     @foreach (var item in Model)
                     {
 
