--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -2,6 +2,7 @@
 @using MVC5.Common
 @{
     ViewBag.Title = "Profile";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
 <script src="~/Scripts/clipboard.min.js"></script>
