--- a/Views/Shared/_LoginPartialHome.cshtml
+++ b/Views/Shared/_LoginPartialHome.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
 
 
-        <div class="btn-group">
+        <div class="btn-group" style="margin-top:2px">
             <button type="button" class="btn btn-danger">Hi, @User.Identity.GetUserName()</button>
             <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
